--- a/style/Style.scss
+++ b/style/Style.scss
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Source+Serif+Pro&display=swap');
 @import url('../style/header.css');
-@import url('../style/main.css');
+@import url('../style/intro.css');
 
 
 html {
