--- a/style/intro.scss
+++ b/style/intro.scss
@@ -29,42 +29,35 @@
             .introWrap {
                 margin: 0 auto;
                 display: grid;
-                grid-template-columns: 1fr 1fr;
-                grid-template-rows: 5rem 48.3rem 5rem;
+                grid-template-columns: 1fr;
+                grid-template-rows: 1.5fr 1fr;
                 .introLeft {
                     grid-column: 1/2;
                     grid-row: 2/3;
                     display: grid;
                     grid-template-columns: 1fr;
-                    grid-template-rows: 4fr 1.5fr 2fr 1fr 4fr;
+                    grid-template-rows: 1fr 1fr 1fr;
                     .introLeft__h1 {
                         grid-column: 1/2;
-                        grid-row: 2/3;
-                        font-family: 'Source Serif Pro', serif;
-                        font-size: 3rem;
-                        line-height: 3.5rem;
+                        grid-row: 1/2;
                         color: #3A5F56;
                     }
                     .introLeft__p {
                         grid-column: 1/2;
-                        grid-row: 3/4;
-                        font-family: 'Roboto', sans-serif;
-                        font-size: 1rem;
-                        line-height: 1.4rem;
+                        grid-row: 2/3;
                         color: #292C32;
                     }
                     .introLeft__a {
                         grid-column: 1/2;
-                        grid-row: 4/5;
+                        grid-row: 3/4;
                         display: flex;
                         flex-flow: row nowrap;
                         justify-content: center;
                         align-items: center;
-                        width: 7.3rem;
-                        height: 2.7rem;
+                        width: 118px;
+                        height: 44px;
                         border-radius: 6px;
                         background-color: #3A5F56;
-                        ////////
                         a:link, a:active, a:focus, a:visited {
                             text-decoration: none;
                             color: #FFFFFF;
@@ -76,11 +69,10 @@
                     }
                 }
                 .introRight {
-                    grid-column: 2/3;
-                    grid-row: 2/3;
-                    justify-self: end;
-                    width: 100%; //34.5rem;
-                    height: 100%; //48.3rem;
+                    grid-column: 1/2;
+                    grid-row: 1/2;
+                    width: 100%;
+                    height: auto;
                     background-image: url('../img/James.png');
                     background-size: contain;
                     background-repeat: no-repeat;
