--- a/style/Style.css
+++ b/style/Style.css
@@ -1,16 +1,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto&family=Source+Serif+Pro&display=swap");
 @import url("../style/header.css");
 @import url("../style/intro.css");
-html {
+@import url("../style/services.css");
+html, body {
   font-size: 16px;
   margin: 0 auto;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
   --basic-title-color: #3A5F56;
   --text-color: #292C32;
   --basic-background-color: #F4F3F0;
   --title-red: #DB343B;
   --just-white: #FFFFFF; }
 
+/*font-family: 'Roboto', sans-serif;
+font-family: 'Source Serif Pro', serif;*/
 /* 
 .main {
     .intro {
