--- a/style/Style.scss
+++ b/style/Style.scss
@@ -1,23 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&family=Source+Serif+Pro&display=swap');
 @import url('../style/header.css');
 @import url('../style/intro.css');
+@import url('../style/services.css');
 
 
-html {
+html, body {
     font-size: 16px;
     margin: 0 auto;
     box-sizing: border-box;
+    font-family: 'Roboto', sans-serif;
 
+    
     --basic-title-color: #3A5F56;
     --text-color: #292C32;
     --basic-background-color: #F4F3F0;
     --title-red: #DB343B;
     --just-white: #FFFFFF;
-
+   
 }
 
 
-
+/*font-family: 'Roboto', sans-serif;
+font-family: 'Source Serif Pro', serif;*/
 
 
 
