--- a/style/header.scss
+++ b/style/header.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
   border: 1px solid red;
   .headerWrap {
-    max-width: 90%;
+    max-width: 95%;//??????
     margin: 0 auto;
   }
 }
@@ -19,10 +19,10 @@
 .card-wrap {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
+    justify-items: flex-end;
     align-items: center;
     padding: 9px;
-    border-radius: 3px;
+    border-radius: 4px;
     gap: 4px;
     background-color: var(--basic-title-color);
 }
@@ -38,6 +38,7 @@
     background-size: cover;
 }
 .cart__count {
+    align-self: flex-end;
     display: flex;
     justify-content: center;
     align-content: center;
@@ -128,7 +129,7 @@
   transform: rotate(-405deg);
 }
 
-@media (max-width: 700px) {
+@media (max-width: 768px) {
   .menu-button-container {
     display: flex;
   }
