--- a/style/intro.css
+++ b/style/intro.css
@@ -1,4 +1,4 @@
-@media screen and (min-width: 320px) {
+@media (min-width: 320px) {
   .intro {
     background-color: var(--basic-background-color);
     position: relative; }
@@ -6,7 +6,8 @@
       max-width: 1440px;
       margin: 0 auto;
       position: relative;
-      overflow: hidden; }
+      overflow: hidden;
+      border: 1px solid red; }
       .intro .intro__gradient_wrap .gradient_1 {
         position: absolute;
         height: 31rem;
@@ -22,27 +23,31 @@
         right: 65%;
         background: radial-gradient(50% 50% at 50% 50%, rgba(184, 125, 88, 0.8) 0%, rgba(184, 125, 88, 0) 100%); }
       .intro .intro__gradient_wrap .introWrap {
+        max-width: 90%;
         margin: 0 auto;
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-template-rows: 1.5fr 1fr; }
+        display: flex;
+        flex-flow: column nowrap;
+        justify-items: center;
+        align-items: center;
+        justify-content: space-around; }
         .intro .intro__gradient_wrap .introWrap .introLeft {
-          grid-column: 1/2;
-          grid-row: 2/3;
-          display: grid;
-          grid-template-columns: 1fr;
-          grid-template-rows: 1fr 1fr 1fr; }
+          padding: 1rem;
+          display: flex;
+          flex-flow: column nowrap;
+          justify-content: center;
+          align-items: center;
+          align-content: space-around; }
           .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__h1 {
-            grid-column: 1/2;
-            grid-row: 1/2;
-            color: #3A5F56; }
+            align-self: center;
+            color: var(--basic-title-color);
+            font-family: 'Source Serif Pro', serif;
+            text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+            font-size: 32px; }
           .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__p {
-            grid-column: 1/2;
-            grid-row: 2/3;
             color: #292C32; }
           .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a {
-            grid-column: 1/2;
-            grid-row: 3/4;
+            margin-top: 5px;
+            cursor: pointer;
             display: flex;
             flex-flow: row nowrap;
             justify-content: center;
@@ -50,20 +55,29 @@
             width: 118px;
             height: 44px;
             border-radius: 6px;
-            background-color: #3A5F56; }
+            background-color: var(--basic-title-color); }
             .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:link, .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:active, .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:focus, .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:visited {
               text-decoration: none;
-              color: #FFFFFF; }
-            .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:hover {
-              text-decoration: underline; }
+              color: var(--just-white); }
         .intro .intro__gradient_wrap .introWrap .introRight {
-          grid-column: 1/2;
-          grid-row: 1/2;
-          width: 100%;
-          height: auto;
-          background-image: url("../img/James.png");
-          background-size: contain;
-          background-repeat: no-repeat;
-          background-position: right; } }
+          padding: 15px; }
+          .intro .intro__gradient_wrap .introWrap .introRight .introRight_img {
+            width: 100%;
+            height: auto;
+            object-position: left top;
+            object-fit: cover; } }
+@media (min-width: 768px) {
+  .intro .intro__gradient_wrap .introWrap {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    justify-content: space-around;
+    align-content: center; }
+    .intro .intro__gradient_wrap .introWrap .introLeft {
+      grid-column: 1/2;
+      grid-row: 1/2; }
+    .intro .intro__gradient_wrap .introWrap .introRight {
+      grid-column: 2/3;
+      grid-row: 1/2; } }
 
 /*# sourceMappingURL=intro.css.map */
