--- a/style/intro.scss
+++ b/style/intro.scss
@@ -1,15 +1,16 @@
 //z index to photo
 
-@media screen and (min-width: 320px) {
+@media (min-width: 320px)  {
     .intro {
         background-color: var(--basic-background-color);
-        position: relative;   
+        position: relative;
         // z-index: 10;
         .intro__gradient_wrap {
             max-width: 1440px;
             margin: 0 auto;
             position: relative;
             overflow: hidden;
+            border: 1px solid red;
             .gradient_1 {
                 position: absolute;
                 height: 31rem;
@@ -27,29 +28,33 @@
                 background: radial-gradient(50% 50% at 50% 50%, rgba(184, 125, 88, 0.8) 0%, rgba(184, 125, 88, 0) 100%);
             }
             .introWrap {
+                max-width: 90%;
                 margin: 0 auto;
-                display: grid;
-                grid-template-columns: 1fr;
-                grid-template-rows: 1.5fr 1fr;
+                display: flex;
+                flex-flow: column nowrap;
+                justify-items: center;
+                align-items: center;
+                justify-content: space-around;
                 .introLeft {
-                    grid-column: 1/2;
-                    grid-row: 2/3;
-                    display: grid;
-                    grid-template-columns: 1fr;
-                    grid-template-rows: 1fr 1fr 1fr;
+                    padding: 1rem;
+                    display: flex;
+                    flex-flow: column nowrap;
+                    justify-content: center;
+                    align-items: center;
+                    align-content: space-around;
                     .introLeft__h1 {
-                        grid-column: 1/2;
-                        grid-row: 1/2;
-                        color: #3A5F56;
+                        align-self: center;
+                        color: var(--basic-title-color);
+                        font-family: 'Source Serif Pro', serif;
+                        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                        font-size: 32px;
                     }
                     .introLeft__p {
-                        grid-column: 1/2;
-                        grid-row: 2/3;
                         color: #292C32;
                     }
                     .introLeft__a {
-                        grid-column: 1/2;
-                        grid-row: 3/4;
+                        margin-top: 5px;
+                        cursor: pointer;
                         display: flex;
                         flex-flow: row nowrap;
                         justify-content: center;
@@ -57,29 +62,50 @@
                         width: 118px;
                         height: 44px;
                         border-radius: 6px;
-                        background-color: #3A5F56;
+                        background-color: var(--basic-title-color);
                         a:link, a:active, a:focus, a:visited {
                             text-decoration: none;
-                            color: #FFFFFF;
+                            color: var(--just-white);
                         }
                         a:hover {
-                            text-decoration: underline;
+                            // text-decoration: underline;
                         }
-                        //////
                     }
                 }
                 .introRight {
-                    grid-column: 1/2;
-                    grid-row: 1/2;
-                    width: 100%;
-                    height: auto;
-                    background-image: url('../img/James.png');
-                    background-size: contain;
-                    background-repeat: no-repeat;
-                    background-position: right;
+                    padding: 15px;
+                    .introRight_img {
+                        width: 100%;
+                        height: auto;
+                        object-position: left top;
+                        object-fit: cover;
+                    }
                 }
             }
         }  
        
     }
+}
+
+@media (min-width: 768px) {
+    .intro {
+        .intro__gradient_wrap {
+            .introWrap {
+                display: grid;
+                grid-template-columns: 1fr 1fr;
+                grid-template-rows: 1fr;
+                justify-content: space-around;
+                align-content: center;
+                .introLeft {
+                    grid-column: 1/2;
+                    grid-row: 1/2;
+                }
+                .introRight {
+                    grid-column: 2/3;
+                    grid-row: 1/2;
+                }
+            }
+        }
+    }
+  
 }
