--- a/style/Style.scss
+++ b/style/Style.scss
@@ -2,6 +2,7 @@
 @import url('../style/header.css');
 @import url('../style/intro.css');
 @import url('../style/services.css');
+@import url('../style/preset.css');
 
 
 html, body {
