--- a/style/Style.css
+++ b/style/Style.css
@@ -2,6 +2,7 @@
 @import url("../style/header.css");
 @import url("../style/intro.css");
 @import url("../style/services.css");
+@import url("../style/preset.css");
 html, body {
   font-size: 16px;
   margin: 0 auto;
