add contact block

--- a/style/Style.scss
+++ b/style/Style.scss
@@ -3,7 +3,7 @@
 @import url('../style/intro.css');
 @import url('../style/services.css');
 @import url('../style/preset.css');
-
+@import url('../style/contact.css');
 
 html, body {
     font-size: 16px;
