--- a/style/Style.scss
+++ b/style/Style.scss
@@ -4,6 +4,7 @@
 @import url('../style/services.css');
 @import url('../style/preset.css');
 @import url('../style/contact.css');
+@import url('../style/footer.css');
 
 html, body {
     font-size: 16px;
