--- a/style/footer.css
+++ b/style/footer.css
@@ -1,3 +1,172 @@
-
+@media screen and (min-width: 320px) {
+  .footer {
+    position: relative;
+    z-index: 14;
+    background-color: #292C32;
+    color: #FFFFFF;
+    padding: 2rem; }
+    .footer .footerGridWrap {
+      margin: 0 auto;
+      max-width: 1440px;
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: space-around;
+      align-items: center;
+      gap: 1rem; }
+      .footer .footerGridWrap ul {
+        padding-inline-start: 0; }
+      .footer .footerGridWrap .footerLogoWrap {
+        justify-self: center;
+        align-self: center; }
+        .footer .footerGridWrap .footerLogoWrap .footerLogoWrap_span {
+          width: 7rem;
+          height: 1.8rem;
+          background-image: url("../img/Logo_header.svg");
+          background-size: contain;
+          background-repeat: no-repeat; }
+      .footer .footerGridWrap .footerColumnWrap {
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-around;
+        align-items: center; }
+        .footer .footerGridWrap .footerColumnWrap li {
+          list-style: none;
+          padding: 0.5rem 0;
+          text-align: center; }
+          .footer .footerGridWrap .footerColumnWrap li a {
+            text-decoration: none;
+            color: #FFFFFF; }
+        .footer .footerGridWrap .footerColumnWrap .ch_cl {
+          color: #B87D58; }
+        .footer .footerGridWrap .footerColumnWrap .newsletter .newsletter_search_wrap .newsletter_search {
+          margin: 0 auto;
+          display: grid;
+          grid-template-columns: 2fr 1fr;
+          grid-template-rows: 1fr;
+          justify-items: center;
+          align-content: center;
+          max-width: 28.6rem;
+          max-height: 3.3rem;
+          background-color: #FFFFFF;
+          border: 1px solid #E5E7EB;
+          border-radius: 8px; }
+          .footer .footerGridWrap .footerColumnWrap .newsletter .newsletter_search_wrap .newsletter_search .email {
+            grid-column: 1/2;
+            grid-row: 1/2;
+            border: none;
+            display: inline-block;
+            width: 90%; }
+          .footer .footerGridWrap .footerColumnWrap .newsletter .newsletter_search_wrap .newsletter_search .submit {
+            grid-column: 2/3;
+            grid-row: 1/2;
+            align-self: center;
+            display: inline-block;
+            width: 120px;
+            height: 30px;
+            border-radius: 0.6rem;
+            background-color: #292C32;
+            color: #FFFFFF; }
+      .footer .footerGridWrap .footerInfo {
+        grid-column: 1/2;
+        grid-row: 3/4;
+        display: grid;
+        grid-template-columns: 7fr 1fr 3fr 1fr;
+        grid-template-rows: 1fr;
+        justify-content: center;
+        align-items: center; }
+        .footer .footerGridWrap .footerInfo .rights {
+          grid-column: 1/2;
+          grid-row: 1/2;
+          font-size: 14px; }
+          .footer .footerGridWrap .footerInfo .rights .webflow {
+            text-align: center;
+            padding-left: 0.4rem;
+            color: #DB343B; }
+        .footer .footerGridWrap .footerInfo .social {
+          grid-column: 3/4;
+          grid-row: 1/2;
+          display: flex;
+          flex-flow: row nowrap;
+          justify-content: space-around;
+          gap: 10px; }
+          .footer .footerGridWrap .footerInfo .social .linkedin a {
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            background-image: url("../img/linkedin.svg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover; }
+          .footer .footerGridWrap .footerInfo .social .facebook a {
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            background-image: url("../img/facebook.svg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover; }
+          .footer .footerGridWrap .footerInfo .social .instagram a {
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            background-image: url("../img/istagram.svg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover; }
+          .footer .footerGridWrap .footerInfo .social .twitter a {
+            display: inline-block;
+            width: 24px;
+            height: 24px;
+            background-image: url("../img/twitter.svg");
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: cover; } }
+@media screen and (min-width: 520px) {
+  .footer .footerGridWrap .footerColumnWrap {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 0.5fr; }
+    .footer .footerGridWrap .footerColumnWrap .pages {
+      grid-column: 1/2;
+      grid-row: 1/2; }
+    .footer .footerGridWrap .footerColumnWrap .presetPacks {
+      grid-column: 2/3;
+      grid-row: 1/2; }
+    .footer .footerGridWrap .footerColumnWrap .utilityPages {
+      grid-column: 1/2;
+      grid-row: 2/3; }
+    .footer .footerGridWrap .footerColumnWrap .storeCategories {
+      grid-column: 2/3;
+      grid-row: 2/3; }
+    .footer .footerGridWrap .footerColumnWrap .businesAreas {
+      grid-column: 1/3;
+      grid-row: 3/4; }
+    .footer .footerGridWrap .footerColumnWrap .newsletter {
+      grid-column: 1/3;
+      grid-row: 4/5; } }
+@media screen and (min-width: 768px) {
+  .footer .footerGridWrap .footerColumnWrap {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 2fr;
+    grid-template-rows: 1fr 1fr;
+    align-items: start; }
+    .footer .footerGridWrap .footerColumnWrap .pages {
+      grid-column: 1/2;
+      grid-row: 1/2; }
+    .footer .footerGridWrap .footerColumnWrap .presetPacks {
+      grid-column: 2/3;
+      grid-row: 1/2; }
+    .footer .footerGridWrap .footerColumnWrap .utilityPages {
+      grid-column: 3/4;
+      grid-row: 1/2; }
+    .footer .footerGridWrap .footerColumnWrap .storeCategories {
+      grid-column: 1/2;
+      grid-row: 2/3; }
+    .footer .footerGridWrap .footerColumnWrap .businesAreas {
+      grid-column: 2/3;
+      grid-row: 2/3; }
+    .footer .footerGridWrap .footerColumnWrap .newsletter {
+      grid-column: 4/5;
+      grid-row: 1/2; } }
 
 /*# sourceMappingURL=footer.css.map */
