--- a/style/header.css
+++ b/style/header.css
@@ -2,9 +2,9 @@
   position: relative;
   max-width: 1440px;
   margin: 0 auto;
-  border: 1px solid red; }
+  z-index: 50; }
   .header .headerWrap {
-    max-width: 95%;
+    max-width: 88%;
     margin: 0 auto; }
 
 .logo {
@@ -106,7 +106,7 @@
   transform: rotate(405deg); }
 
 #menu-toggle:checked + .menu-button-container .menu-button {
-  background: rgba(255, 255, 255, 0); }
+  background: var(--just-white); }
 
 #menu-toggle:checked + .menu-button-container .menu-button::after {
   margin-top: 0px;
@@ -119,7 +119,7 @@
   .menu {
     position: absolute;
     top: 0;
-    margin-top: 82px;
+    margin-top: 72px;
     left: 0;
     flex-direction: column;
     width: 100%;
@@ -134,7 +134,7 @@
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1); }
 
   #menu-toggle:checked ~ .menu li {
-    border: 1px solid #333;
+    border: 1px solid var(--menu-li);
     height: 2.5em;
     padding: 0.5em;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1); }
@@ -145,33 +145,30 @@
     margin: 0;
     padding: 0.5em 0;
     width: 100%;
-    background-color: var(--basic-background-color); }
+    background-color: var(--just-white); }
 
   .menu > li:not(:last-child) {
-    border-bottom: 1px solid #444; }
+    border-bottom: 1px solid var(--menu-li-not); }
 
-  .card-wrap {
+  .header .headerWrap .top-nav .menu .card-wrap {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between;
-    align-items: center;
+    justify-content: center;
     padding: 9px;
     border-radius: 3px;
     gap: 4px;
     background-color: var(--basic-title-color); }
-
-  .cart__href {
-    color: var(--basic-title-color); }
-
-  .cart__href_before {
+  .header .headerWrap .top-nav .menu .cart__href {
+    color: var(--just-white); }
+  .header .headerWrap .top-nav .menu .cart__href_before {
     content: "";
     display: inline-block;
     background-image: url("../img/basket.svg");
     width: 17px;
     height: 17px;
     background-size: cover; }
-
-  .cart__count {
+  .header .headerWrap .top-nav .menu .cart__count {
+    align-self: center;
     display: flex;
     justify-content: center;
     align-content: center;
