--- a/style/intro.css
+++ b/style/intro.css
@@ -1,13 +1,13 @@
 @media (min-width: 320px) {
   .intro {
-    background-color: var(--basic-background-color);
-    position: relative; }
+    position: relative;
+    z-index: 10; }
     .intro .intro__gradient_wrap {
       max-width: 1440px;
       margin: 0 auto;
       position: relative;
       overflow: hidden;
-      border: 1px solid red; }
+      background-color: var(--basic-background-color); }
       .intro .intro__gradient_wrap .gradient_1 {
         position: absolute;
         height: 31rem;
@@ -40,11 +40,11 @@
           .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__h1 {
             align-self: center;
             color: var(--basic-title-color);
-            font-family: 'Source Serif Pro', serif;
+            font-family: "Source Serif Pro", serif;
             text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
             font-size: 32px; }
           .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__p {
-            color: #292C32; }
+            color: var(--text-color); }
           .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a {
             margin-top: 5px;
             cursor: pointer;
@@ -56,7 +56,10 @@
             height: 44px;
             border-radius: 6px;
             background-color: var(--basic-title-color); }
-            .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:link, .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:active, .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:focus, .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:visited {
+            .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:link,
+            .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:active,
+            .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:focus,
+            .intro .intro__gradient_wrap .introWrap .introLeft .introLeft__a a:visited {
               text-decoration: none;
               color: var(--just-white); }
         .intro .intro__gradient_wrap .introWrap .introRight {
