--- a/style/contact.scss
+++ b/style/contact.scss
@@ -1,74 +1,78 @@
 @media screen and (min-width: 320px) {
-    .contact {
-        position: relative;
-        z-index: 13;
-        .gradientContact {
-            position: absolute;
-            width: 53.4rem;
-            height: 48.3rem;
-            top: 10rem;
-            right: 47.6%;
-            background: radial-gradient(50% 50% at 50% 50%, rgba(184, 125, 88, 0.35) 0%, rgba(184, 125, 88, 0) 100%);
-        }
-        .contactWrap {
-        padding: 2rem;
-        max-width: 800px;
-        margin: 0 auto;
-        display: flex;
-        flex-flow: row nowrap;
-        background-color: var(--just-white);
-        .contactWrapGrid {
-            grid-column: 1/2;
-            grid-row: 2/3;
-            max-width: 90%;
-            margin: 0 auto;
-            display: grid;
-            grid-template-columns: 1fr;
-            grid-template-rows: 1fr 1fr;
-            justify-items: center;
-            align-content: space-around;
-            border-radius: 1rem;
-            .contactWrap__paragraph {
-                grid-column: 1/2;
-                grid-row: 1/2;
-                max-width: 90%;
-                align-self: end;
-                font-size: 1.1rem;
-                text-align: center;
-                .contactWrap__paragraph_p {
-                }
-            }
-            .contactWrap__btn_a {
-                grid-column: 1/2;
-                grid-row: 2/3;  
-                align-self: center;
-                width: 118px;
-                height: 44px;
-                border-radius: 6px;
-                background-color: #3A5F56;
-                display: flex;
-                flex-flow: row nowrap;
-                justify-content: center;
-                align-items: center;
-                .contactWrap__btn {
-                    text-decoration: none;
-                    width: 4.7rem;
-                    height: 1.7rem;
-                    color: #FFFFFF;
-                    font-size: 1rem;
-                    text-align: center;
-                }
-            }
-        }
-        }
+  .contact {
+    position: relative;
+    z-index: 13;
+    .gradientContact {
+      position: absolute;
+      width: 53.4rem;
+      height: 48.3rem;
+      top: 10rem;
+      right: 47.6%;
+      background: radial-gradient(
+        50% 50% at 50% 50%,
+        rgba(184, 125, 88, 0.35) 0%,
+        rgba(184, 125, 88, 0) 100%
+      );
     }
+    .contactWrap {
+      padding: 2rem;
+      max-width: 800px;
+      margin: 0 auto;
+      display: flex;
+      flex-flow: row nowrap;
+      background-color: var(--just-white);
+      .contactWrapGrid {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        max-width: 90%;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-items: center;
+        align-content: space-around;
+        border-radius: 1rem;
+        .contactWrap__paragraph {
+          grid-column: 1/2;
+          grid-row: 1/2;
+          max-width: 90%;
+          align-self: end;
+          font-size: 1.1rem;
+          text-align: center;
+          .contactWrap__paragraph_p {
+          }
+        }
+        .contactWrap__btn_a {
+          grid-column: 1/2;
+          grid-row: 2/3;
+          align-self: center;
+          width: 118px;
+          height: 44px;
+          border-radius: 6px;
+          background-color: #3a5f56;
+          display: flex;
+          flex-flow: row nowrap;
+          justify-content: center;
+          align-items: center;
+          .contactWrap__btn {
+            text-decoration: none;
+            width: 4.7rem;
+            height: 1.7rem;
+            color: #ffffff;
+            font-size: 1rem;
+            text-align: center;
+          }
+        }
+      }
+    }
+  }
 }
 @media screen and (min-width: 768px) {
-    .contact {
-        .contactWrap {
-            .contactWrapGrid {
-                background-color: #F4F3F0;
-            }
-        }
+  .contact {
+    .contactWrap {
+      .contactWrapGrid {
+        background-color: --basic-background-color;
+      }
     }
+  }
 }
