--- a/style/header.scss
+++ b/style/header.scss
@@ -4,8 +4,23 @@
   margin: 0 auto;
   z-index: 50;
   .headerWrap {
-    max-width: 88%;
+    max-width: 87%;
     margin: 0 auto;
+    .top-nav {
+      .menu {
+        .card-wrap {
+          .cart__href {
+            color: var(--just-white);
+          }
+        }
+        li {
+          a:link,
+          a:visited {
+            color: var(--basic-title-color);
+          }
+        }
+      }
+    }
   }
 }
 
