--- a/style/intro.css
+++ b/style/intro.css
@@ -1,13 +1,13 @@
 @media (min-width: 320px) {
   .intro {
     position: relative;
-    z-index: 10; }
+    z-index: 10;
+    background-color: var(--basic-background-color); }
     .intro .intro__gradient_wrap {
       max-width: 1440px;
       margin: 0 auto;
       position: relative;
-      overflow: hidden;
-      background-color: var(--basic-background-color); }
+      overflow: hidden; }
       .intro .intro__gradient_wrap .gradient_1 {
         position: absolute;
         height: 31rem;
