--- a/style/preset.css
+++ b/style/preset.css
@@ -39,7 +39,7 @@
         .preset .preset-gradient_wrap .presetWrap .presetIntroWrap .presetIntroWrap__h3 {
           grid-column: 1/2;
           grid-row: 3/4;
-          font-family: 'Source Serif Pro', serif;
+          font-family: "Source Serif Pro", serif;
           font-size: 1.7rem;
           line-height: 0.4rem;
           text-align: center;
@@ -47,7 +47,7 @@
         .preset .preset-gradient_wrap .presetWrap .presetIntroWrap .presetIntroWrap__p {
           grid-column: 1/2;
           grid-row: 4/5;
-          font-family: 'Roboto', sans-serif;
+          font-family: "Roboto", sans-serif;
           font-size: 16px;
           max-width: 65%;
           margin: 0 auto; }
@@ -64,7 +64,7 @@
           max-height: auto;
           border-radius: 1rem;
           box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
-          background-color: #FFFFFF;
+          background-color: --just-white;
           margin: 1rem; }
         .preset .preset-gradient_wrap .presetWrap .presetGridWrap .img_pr_cell {
           width: auto;
@@ -74,7 +74,7 @@
           background-repeat: no-repeat;
           background-position: center; }
         .preset .preset-gradient_wrap .presetWrap .presetGridWrap .h4_pr_cell {
-          font-family: 'Source Serif Pro', serif;
+          font-family: "Source Serif Pro", serif;
           font-size: 1.5rem;
           line-height: 1rem;
           padding: 0 1rem; }
