--- a/style/services.scss
+++ b/style/services.scss
@@ -1,237 +1,246 @@
 @media screen and (min-width: 320px) {
-    .services {
-        padding-top: 2rem;
-        background-color:var(--just-white);
-        position: relative;
-        z-index: 11;
-        .gradientServices_1 {
-            z-index: 12;
-            position: absolute;
-            width: 50.3rem;
-            height: 41.4rem;
-            top: 62rem;
-            right: 76%;
-            background: radial-gradient(50% 50% at 50% 50%, rgba(58, 95, 86, 0.376) 0%, rgba(58, 95, 86, 0) 100%);
-        }
-        .servicesWrap {
-            max-width: 1440px;
-            margin: 0 auto;
-            display: flex;
-            flex-flow: column nowrap;
-            justify-content: space-around;
-            align-content: center;
-            gap: 1rem;
-            .servicesIntroWrap {
-                width: 90%;
-                margin: 0 auto;
-                display: grid;
-                grid-template-columns: 1fr;
-                grid-template-rows: auto auto auto;
-                .servicesIntroWrap__wave {
-                    grid-column: 1/2;
-                    grid-row: 1/2;
-                    display: inline-block;
-                    height: 1.2rem;
-                    background-image: url('../img/wawe.svg');
-                    background-size: contain;
-                    background-repeat: no-repeat;
-                    background-position: center;
-                }
-                .servicesIntroWrap__h3 {
-                    grid-column: 1/2;
-                    grid-row: 2/3;
-                    font-family: 'Source Serif Pro', serif;
-                    font-size: 2rem;
-                    line-height: 0.4rem;
-                    text-align: center;
-                    color: var(--basic-title-color);
-                }
-                .servicesIntroWrap__p {
-                    
-                    grid-column: 1/2;
-                    grid-row: 3/4;
-                    max-width: 600px;
-                    align-self: center;
-                    justify-self: center;
-                    font-size: 16px;
-                }
-            }
-            .servicesGridWrap {
-                width: 90%;
-                margin: 0 auto;
-                display: grid;
-                grid-template-columns: 1fr;
-                grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-                justify-content: center;
-                align-content: center;
-                gap: 8px;
-                .s_cell {
-                    max-width: 270px;
-                    max-height: 270px;
-                    border-radius: 10px;
-                    background-color: #F4F3F0;
-                    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.03);
-                    justify-self: center;
-                    padding: 1.9rem;
-                }
-                .s_cell_img {
-                    display: inline-block;
-                    height: 35px;
-                    width: 35px;
-                    background-size: contain;
-                    background-repeat: no-repeat;
-                    background-position: center;
-                }
-                .s_cell_h4 {
-                    font-family: 'Source Serif Pro', serif;
-                    font-size: 18px;
-                }
-                .p_cell_p {
-                    font-family: 'Roboto', sans-serif;
-                    font-size: 14px;
-                }
-                .s_cell_btn {
-                    .s_cell_btn_a {
-                        text-decoration: none;
-                    }
-                    .s_cell_btn_a::after {
-                       content: "";
-                       display: inline-block;
-                       background-image: url('../img/arrow_a.svg');
-                       width: 1.2rem;
-                       height: 0.6rem;
-                       background-size: cover;
-                       margin-left: 0.2rem; 
-                       font-size: 14px;
-                    }
-                }
-               
-                .servicesGridWrap__div1 {
-                    grid-column: 1/2;
-                    grid-row: 1/2;
-                .s_cell_img {
-                    background-image: url('../img/s_01.svg');
-                }
-                }
-                .servicesGridWrap__div2 {
-                    grid-column: 1/2;
-                    grid-row: 2/3;
-                    .s_cell_img {
-                        background-image: url('../img/s_02.svg');
-                    }
-                }
-                .servicesGridWrap__div3 {
-                    grid-column: 1/2;
-                    grid-row: 3/4;
-                    .s_cell_img {
-                        background-image: url('../img/s_03.svg');
-                    }
-                }
-                .servicesGridWrap__div4 {
-                    grid-column: 1/2;
-                    grid-row: 4/5;
-                    .s_cell_img {
-                        background-image: url('../img/s_04.svg');
-                    }
-                }
-                .servicesGridWrap__div5 {
-                    grid-column: 1/2;
-                    grid-row: 5/6;
-                    .s_cell_img {
-                        background-image: url('../img/s_05.svg');
-                    }
-                }
-                .servicesGridWrap__div6 {
-                    grid-column: 1/2;
-                    grid-row: 6/7;
-                    .s_cell_img {
-                        background-image: url('../img/s_06.svg');
-                    }
-                }
-                .servicesGridWrap__div7 {
-                    grid-column: 1/2;
-                    grid-row: 7/8;
-                    .s_cell_img {
-                        background-image: url('../img/s_07.svg');
-                    }
-                }
-            }
-        }
+  .services {
+    padding: 2rem;
+    background-color: var(--just-white);
+    position: relative;
+    z-index: 11;
+    .gradientServices_1 {
+      z-index: 12;
+      position: absolute;
+      width: 50.3rem;
+      height: 41.4rem;
+      top: 62rem;
+      right: 76%;
+      background: radial-gradient(
+        50% 50% at 50% 50%,
+        rgba(58, 95, 86, 0.376) 0%,
+        rgba(58, 95, 86, 0) 100%
+      );
     }
+    .servicesWrap {
+      max-width: 1440px;
+      margin: 0 auto;
+      display: flex;
+      flex-flow: column nowrap;
+      justify-content: space-around;
+      align-content: center;
+      gap: 1rem;
+      .servicesIntroWrap {
+        width: 90%;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto auto auto;
+        .servicesIntroWrap__wave {
+          grid-column: 1/2;
+          grid-row: 1/2;
+          display: inline-block;
+          height: 1.2rem;
+          background-image: url("../img/wawe.svg");
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-position: center;
+        }
+        .servicesIntroWrap__h3 {
+          grid-column: 1/2;
+          grid-row: 2/3;
+          font-family: "Source Serif Pro", serif;
+          font-size: 2rem;
+          line-height: 0.4rem;
+          text-align: center;
+          color: var(--basic-title-color);
+        }
+        .servicesIntroWrap__p {
+          grid-column: 1/2;
+          grid-row: 3/4;
+          max-width: 70%;
+          align-self: center;
+          justify-self: center;
+          font-size: 16px;
+        }
+      }
+      .servicesGridWrap {
+        width: 90%;
+        margin: 0 auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+        justify-content: center;
+        align-content: center;
+        gap: 8px;
+        .s_cell {
+          max-width: 270px;
+          max-height: 270px;
+          border-radius: 10px;
+          background-color: var(--basic-background-color);
+          box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.03);
+          justify-self: center;
+          padding: 1.9rem;
+        }
+        .s_cell_img {
+          display: inline-block;
+          height: 35px;
+          width: 35px;
+          background-size: contain;
+          background-repeat: no-repeat;
+          background-position: center;
+        }
+        .s_cell_h4 {
+          font-family: "Source Serif Pro", serif;
+          font-size: 18px;
+        }
+        .p_cell_p {
+          font-family: "Roboto", sans-serif;
+          font-size: 14px;
+        }
+        .s_cell_btn {
+          .s_cell_btn_a {
+            text-decoration: none;
+          }
+          .s_cell_btn_a::after {
+            content: "";
+            display: inline-block;
+            background-image: url("../img/arrow_a.svg");
+            width: 1.2rem;
+            height: 0.6rem;
+            background-size: cover;
+            margin-left: 0.2rem;
+            font-size: 14px;
+          }
+        }
+
+        .servicesGridWrap__div1 {
+          grid-column: 1/2;
+          grid-row: 1/2;
+          .s_cell_img {
+            background-image: url("../img/s_01.svg");
+          }
+        }
+        .servicesGridWrap__div2 {
+          grid-column: 1/2;
+          grid-row: 2/3;
+          .s_cell_img {
+            background-image: url("../img/s_02.svg");
+          }
+        }
+        .servicesGridWrap__div3 {
+          grid-column: 1/2;
+          grid-row: 3/4;
+          .s_cell_img {
+            background-image: url("../img/s_03.svg");
+          }
+        }
+        .servicesGridWrap__div4 {
+          grid-column: 1/2;
+          grid-row: 4/5;
+          .s_cell_img {
+            background-image: url("../img/s_04.svg");
+          }
+        }
+        .servicesGridWrap__div5 {
+          grid-column: 1/2;
+          grid-row: 5/6;
+          .s_cell_img {
+            background-image: url("../img/s_05.svg");
+          }
+        }
+        .servicesGridWrap__div6 {
+          grid-column: 1/2;
+          grid-row: 6/7;
+          .s_cell_img {
+            background-image: url("../img/s_06.svg");
+          }
+        }
+        .servicesGridWrap__div7 {
+          grid-column: 1/2;
+          grid-row: 7/8;
+          .s_cell_img {
+            background-image: url("../img/s_07.svg");
+          }
+        }
+      }
+    }
+  }
 }
 @media screen and (min-width: 550px) {
-    .services {
-        .servicesWrap {
-            .servicesGridWrap {
-                grid-template-columns: 1fr 1fr;
-                grid-template-rows: 1fr 1fr 1fr 1fr;
-                .servicesGridWrap__div1 {
-                    grid-column: 1/2;
-                    grid-row: 1/2;
-                }
-                .servicesGridWrap__div2 {
-                    grid-column: 2/3;
-                    grid-row: 1/2;
-                }
-                .servicesGridWrap__div3 {
-                    grid-column: 1/2;
-                    grid-row: 2/3;
-                }
-                .servicesGridWrap__div4 {
-                    grid-column: 2/3;
-                    grid-row: 2/3;
-                }
-                .servicesGridWrap__div5 {
-                    grid-column: 1/2;
-                    grid-row: 3/4;
-                }
-                .servicesGridWrap__div6 {
-                    grid-column: 2/3;
-                    grid-row: 3/4;
-                }
-                .servicesGridWrap__div7 {
-                    grid-column: 2/3;
-                    grid-row: 4/5;
-                }
-            }
+  .services {
+    .servicesWrap {
+      .servicesGridWrap {
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        .servicesGridWrap__div1 {
+          grid-column: 1/2;
+          grid-row: 1/2;
         }
+        .servicesGridWrap__div2 {
+          grid-column: 2/3;
+          grid-row: 1/2;
+        }
+        .servicesGridWrap__div3 {
+          grid-column: 1/2;
+          grid-row: 2/3;
+        }
+        .servicesGridWrap__div4 {
+          grid-column: 2/3;
+          grid-row: 2/3;
+        }
+        .servicesGridWrap__div5 {
+          grid-column: 1/2;
+          grid-row: 3/4;
+        }
+        .servicesGridWrap__div6 {
+          grid-column: 2/3;
+          grid-row: 3/4;
+        }
+        .servicesGridWrap__div7 {
+          grid-column: 2/3;
+          grid-row: 4/5;
+        }
+      }
     }
+  }
 }
 @media screen and (min-width: 950px) {
-    .services {
-        .servicesWrap {
-            .servicesGridWrap {
-                grid-template-columns: 1fr 1fr 1fr;
-                grid-template-rows: 1fr 1fr 1fr 1fr;
-                .servicesGridWrap__div1 {
-                    grid-column: 1/2;
-                    grid-row: 1/2;
-                }
-                .servicesGridWrap__div2 {
-                    grid-column: 2/3;
-                    grid-row: 1/2;
-                }
-                .servicesGridWrap__div3 {
-                    grid-column: 3/4;
-                    grid-row: 1/2;
-                }
-                .servicesGridWrap__div4 {
-                    grid-column: 1/2;
-                    grid-row: 2/3;
-                }
-                .servicesGridWrap__div5 {
-                    grid-column: 2/3;
-                    grid-row: 2/3;
-                }
-                .servicesGridWrap__div6 {
-                    grid-column: 3/4;
-                    grid-row: 2/3;
-                }
-                .servicesGridWrap__div7 {
-                    grid-column: 1/2;
-                    grid-row: 3/4;
-                }
-            }
+  .services {
+    .servicesWrap {
+      max-width: 1150px;
+      .servicesIntroWrap {
+        .servicesIntroWrap__p {
+          max-width: 50%;
         }
+      }
+      .servicesGridWrap {
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        .servicesGridWrap__div1 {
+          grid-column: 1/2;
+          grid-row: 1/2;
+        }
+        .servicesGridWrap__div2 {
+          grid-column: 2/3;
+          grid-row: 1/2;
+        }
+        .servicesGridWrap__div3 {
+          grid-column: 3/4;
+          grid-row: 1/2;
+        }
+        .servicesGridWrap__div4 {
+          grid-column: 1/2;
+          grid-row: 2/3;
+        }
+        .servicesGridWrap__div5 {
+          grid-column: 2/3;
+          grid-row: 2/3;
+        }
+        .servicesGridWrap__div6 {
+          grid-column: 3/4;
+          grid-row: 2/3;
+        }
+        .servicesGridWrap__div7 {
+          grid-column: 1/2;
+          grid-row: 3/4;
+        }
+      }
     }
+  }
 }
