--- a/style/services.scss
+++ b/style/services.scss
@@ -94,8 +94,11 @@
           font-size: 14px;
         }
         .s_cell_btn {
-          .s_cell_btn_a {
+          .s_cell_btn_a,
+          .s_cell_btn_a:link,
+          .s_cell_btn_a:visited {
             text-decoration: none;
+            color: var(--basic-title-color);
           }
           .s_cell_btn_a::after {
             content: "";
